--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,5 +3,7 @@
 @import 'tailwindcss/utilities';
 
 body{
-  background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
+  /* background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%); */
+  background-color: #1C1C1C;
+  min-height: 100vh;
 }
